@@ -1,2 +1,2 @@
-SIMUPOP_VER = "0.6.12"
-SIMUPOP_REV = "187"
+SIMUPOP_VER = "snapshot"
+SIMUPOP_REV = "188"
